@@ -23,6 +23,9 @@
 - Added 'track' command.
 - Added 'cancel' command.
 - Added 'config' command.
+- Added 'tag' command.
+- Added 'untag' command.
+- Added 'shorten' command.
 
 Design completed 2016-03-13
 Project started  2015-11-29
